Fix violations of PrimitiveWrapperInstantiation