@@ -123,7 +123,7 @@ public class BrokerConfig extends MQMBeanReadWrite implements ConfigListener {
         Integer i = null;
 
         try {
-            i = new Integer(s);
+            i = Integer.valueOf(s);
         } catch (Exception e) {
             handleGetterException(BrokerAttributes.PORT, e);
         }
